@@ -1178,7 +1178,7 @@ bmwt_html_open_with_change_state(GSimpleAction *action,
     open_with_change_state(action, parameter, mime_body);
 
     if (libbalsa_use_popover()) {
-        GtkPopover *popover = g_object_get_data(G_OBJECT(html), "popup-menu");
+        GtkPopover *popover = g_object_get_data(G_OBJECT(html), "popup-widget");
         gtk_popover_popdown(popover);
     }
 }
